# protobuf-go

./: BUILD  README.md  WORKSPACE  go.mod  go.sum  integration_test.go  release.bash
.github/workflows/: test.yml
cmd/protoc-gen-go/testdata/: BUILD.bazel
cmd/protoc-gen-go/testdata/annotations/: BUILD.bazel
cmd/protoc-gen-go/testdata/comments/: BUILD.bazel  comments.pb.go
cmd/protoc-gen-go/testdata/extensions/base/: BUILD.bazel  base.pb.go
cmd/protoc-gen-go/testdata/extensions/ext/: BUILD.bazel  ext.pb.go
cmd/protoc-gen-go/testdata/extensions/extra/: BUILD.bazel
cmd/protoc-gen-go/testdata/extensions/proto3/: BUILD.bazel
cmd/protoc-gen-go/testdata/fieldnames/: BUILD.bazel
cmd/protoc-gen-go/testdata/import_public/: BUILD.bazel  a.pb.go  b.pb.go
cmd/protoc-gen-go/testdata/import_public/sub/: BUILD.bazel  a.pb.go
cmd/protoc-gen-go/testdata/import_public/sub2/: BUILD.bazel
cmd/protoc-gen-go/testdata/imports/: BUILD.bazel
cmd/protoc-gen-go/testdata/imports/fmt/: BUILD.bazel
cmd/protoc-gen-go/testdata/imports/test_a_1/: BUILD.bazel
cmd/protoc-gen-go/testdata/imports/test_a_2/: BUILD.bazel
cmd/protoc-gen-go/testdata/issue780_oneof_conflict/: BUILD.bazel
cmd/protoc-gen-go/testdata/nopackage/: BUILD.bazel
cmd/protoc-gen-go/testdata/proto2/: BUILD.bazel
cmd/protoc-gen-go/testdata/proto3/: BUILD.bazel
compiler/protogen/: BUILD.bazel  protogen_test.go
encoding/: BUILD.bazel  bench_test.go
encoding/protodelim/: BUILD.bazel  protodelim.go  protodelim_test.go
encoding/protojson/: BUILD.bazel  decode_test.go  encode_test.go
encoding/prototext/: BUILD.bazel  decode_test.go  encode_test.go  other_test.go
encoding/protowire/: BUILD.bazel
internal/benchmarks/: BUILD.bazel  bench_test.go
internal/benchmarks/micro/: BUILD.bazel  micro_test.go
internal/cmd/generate-protos/: main.go
internal/cmd/generate-types/: impl.go  main.go  proto.go
internal/cmd/pbdump/: pbdump.go  pbdump_test.go
internal/conformance/: BUILD.bazel  failing_tests_text_format.txt
internal/descfmt/: BUILD.bazel
internal/detrand/: BUILD.bazel  rand.go
internal/encoding/defval/: BUILD.bazel  default_test.go
internal/encoding/json/: BUILD.bazel  bench_test.go
internal/encoding/tag/: BUILD.bazel  tag_test.go
internal/encoding/text/: BUILD.bazel  decode_test.go  encode_test.go
internal/errors/: BUILD.bazel
internal/filedesc/: BUILD.bazel  build_test.go  desc_test.go
internal/fuzz/: oss-fuzz-build.sh
internal/fuzz/jsonfuzz/: BUILD.bazel
internal/fuzz/textfuzz/: BUILD.bazel
internal/fuzz/wirefuzz/: BUILD.bazel  fuzz.go
internal/impl/: BUILD.bazel  enum_test.go  extension_test.go  legacy_file_test.go  legacy_test.go  message_reflect_test.go
internal/msgfmt/: BUILD.bazel  format.go  format_test.go
internal/order/: BUILD.bazel  order_test.go
internal/protobuild/: build.go
internal/set/: BUILD.bazel
internal/strs/: BUILD.bazel
internal/testprotos/annotation/: BUILD.bazel
internal/testprotos/benchmarks/micro/: BUILD.bazel
internal/testprotos/conformance/: conformance.pb.go  test_messages_proto2.pb.go  test_messages_proto3.pb.go
internal/testprotos/enums/: BUILD.bazel  enums.pb.go  enums.proto
internal/testprotos/fieldtrack/: BUILD.bazel  fieldtrack.pb.go
internal/testprotos/fuzz/: BUILD.bazel
internal/testprotos/irregular/: BUILD.bazel  irregular.go
internal/testprotos/legacy/: BUILD.bazel
internal/testprotos/legacy/bug1052/: BUILD.bazel
internal/testprotos/legacy/proto2_20160225_2fc053c5/: BUILD.bazel
internal/testprotos/legacy/proto2_20160519_a4ab9ec5/: BUILD.bazel
internal/testprotos/legacy/proto2_20180125_92554152/: BUILD.bazel
internal/testprotos/legacy/proto2_20180430_b4deda09/: BUILD.bazel
internal/testprotos/legacy/proto2_20180814_aa810b61/: BUILD.bazel
internal/testprotos/legacy/proto2_20190205_c823c79e/: BUILD.bazel
internal/testprotos/legacy/proto3_20160225_2fc053c5/: BUILD.bazel
internal/testprotos/legacy/proto3_20160519_a4ab9ec5/: BUILD.bazel
internal/testprotos/legacy/proto3_20180125_92554152/: BUILD.bazel
internal/testprotos/legacy/proto3_20180430_b4deda09/: BUILD.bazel
internal/testprotos/legacy/proto3_20180814_aa810b61/: BUILD.bazel
internal/testprotos/legacy/proto3_20190205_c823c79e/: BUILD.bazel
internal/testprotos/messageset/messagesetpb/: BUILD.bazel  message_set.pb.go
internal/testprotos/messageset/msetextpb/: BUILD.bazel
internal/testprotos/news/: BUILD.bazel  news.pb.go  news.proto
internal/testprotos/nullable/: BUILD.bazel  methods_test.go  nullable.go  nullable_test.go
internal/testprotos/order/: BUILD.bazel  order.pb.go
internal/testprotos/registry/: BUILD.bazel  test.pb.go
internal/testprotos/required/: BUILD.bazel
internal/testprotos/test/: BUILD.bazel  test.pb.go  test.proto
internal/testprotos/test/weak1/: BUILD.bazel
internal/testprotos/test/weak2/: BUILD.bazel
internal/testprotos/test3/: BUILD.bazel
internal/testprotos/textpb2/: BUILD.bazel  test.pb.go
internal/testprotos/textpb3/: BUILD.bazel
internal/weakdeps/: weakdeps.go
proto/: BUILD.bazel  bench_test.go  encode_test.go  equal_test.go  extension_test.go  methods_test.go  protoinit.go
reflect/protodesc/: BUILD.bazel  file_test.go
reflect/protopath/: path.go  step.go
reflect/protorange/: BUILD.bazel  example_test.go  range.go  range_test.go
reflect/protoreflect/: BUILD.bazel  value_union.go
reflect/protoregistry/: BUILD.bazel  registry_test.go
testing/protocmp/: BUILD.bazel  reflect.go  util.go  xform.go  xform_test.go
testing/protopack/: BUILD.bazel  pack.go  pack_test.go
testing/prototest/: BUILD.bazel  enum.go  message.go
types/dynamicpb/: BUILD.bazel  dynamic.go  dynamic_test.go
types/known/anypb/: BUILD.bazel
types/known/apipb/: api.pb.go
types/known/durationpb/: BUILD.bazel
types/known/emptypb/: empty.pb.go
types/known/fieldmaskpb/: BUILD.bazel
types/known/sourcecontextpb/: source_context.pb.go
types/known/structpb/: BUILD.bazel  struct.pb.go
types/known/timestamppb/: BUILD.bazel
types/known/typepb/: type.pb.go
(+8 files in other folders)
