load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prototext",
    srcs = [
        "decode.go",
        "doc.go",
        "encode.go",
    ],
    importpath = "google.golang.org/protobuf/encoding/prototext",
    visibility = ["//visibility:public"],
    deps = [
        "//encoding/protowire",
        "//internal/encoding/messageset",
        "//internal/encoding/text",
        "//internal/errors",
        "//internal/flags",
        "//internal/genid",
        "//internal/order",
        "//internal/pragma",
        "//internal/set",
        "//internal/strs",
        "//proto",
        "//reflect/protoreflect",
        "//reflect/protoregistry",
    ],
)

go_test(
    name = "prototext_test",
    srcs = [
        "decode_test.go",
        "encode_test.go",
        "other_test.go",
    ],
    deps = [
        ":prototext",
        "//internal/detrand",
        "//internal/flags",
        "//internal/testprotos/test",
        "//internal/testprotos/test/weak1",
        "//internal/testprotos/textpb2",
        "//internal/testprotos/textpb3",
        "//proto",
        "//reflect/protoregistry",
        "//testing/protopack",
        "//types/known/anypb",
        "//types/known/durationpb",
        "//types/known/emptypb",
        "//types/known/structpb",
        "//types/known/timestamppb",
        "//types/known/wrapperspb",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "decode_test.go",
        "encode_test.go",
        "other_test.go",
    ],
    deps = [
        ":go_default_library",
        "//internal/detrand:go_default_library",
        "//internal/flags:go_default_library",
        "//internal/testprotos/test:go_default_library",
        "//internal/testprotos/test/weak1:go_default_library",
        "//internal/testprotos/textpb2:go_default_library",
        "//internal/testprotos/textpb3:go_default_library",
        "//proto:go_default_library",
        "//reflect/protoregistry:go_default_library",
        "//testing/protopack:go_default_library",
        "//types/known/anypb:go_default_library",
        "//types/known/durationpb:go_default_library",
        "//types/known/emptypb:go_default_library",
        "//types/known/structpb:go_default_library",
        "//types/known/timestamppb:go_default_library",
        "//types/known/wrapperspb:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":prototext",
    visibility = ["//visibility:public"],
)
