load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoregistry",
    srcs = ["registry.go"],
    importpath = "google.golang.org/protobuf/reflect/protoregistry",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/encoding/messageset",
        "//internal/errors",
        "//internal/flags",
        "//reflect/protoreflect",
    ],
)

go_test(
    name = "protoregistry_test",
    srcs = ["registry_test.go"],
    deps = [
        ":protoregistry",
        "//encoding/prototext",
        "//internal/impl",
        "//internal/testprotos/registry",
        "//reflect/protodesc",
        "//reflect/protoreflect",
        "//types/descriptorpb",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["registry_test.go"],
    deps = [
        ":go_default_library",
        "//encoding/prototext:go_default_library",
        "//internal/impl:go_default_library",
        "//internal/testprotos/registry:go_default_library",
        "//reflect/protodesc:go_default_library",
        "//reflect/protoreflect:go_default_library",
        "//types/descriptorpb:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":protoregistry",
    visibility = ["//visibility:public"],
)
