load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prototest",
    srcs = [
        "enum.go",
        "message.go",
    ],
    importpath = "google.golang.org/protobuf/testing/prototest",
    visibility = ["//visibility:public"],
    deps = [
        "//encoding/prototext",
        "//encoding/protowire",
        "//proto",
        "//reflect/protoreflect",
        "//reflect/protoregistry",
    ],
)

go_test(
    name = "prototest_test",
    srcs = ["prototest_test.go"],
    deps = [
        ":prototest",
        "//internal/flags",
        "//internal/testprotos/irregular",
        "//internal/testprotos/legacy",
        "//internal/testprotos/legacy/proto2_20160225_2fc053c5",
        "//internal/testprotos/test",
        "//internal/testprotos/test/weak1",
        "//internal/testprotos/test/weak2",
        "//internal/testprotos/test3",
        "//proto",
        "//runtime/protoimpl",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["prototest_test.go"],
    deps = [
        ":go_default_library",
        "//internal/flags:go_default_library",
        "//internal/testprotos/irregular:go_default_library",
        "//internal/testprotos/legacy:go_default_library",
        "//internal/testprotos/legacy/proto2_20160225_2fc053c5:go_default_library",
        "//internal/testprotos/test:go_default_library",
        "//internal/testprotos/test/weak1:go_default_library",
        "//internal/testprotos/test/weak2:go_default_library",
        "//internal/testprotos/test3:go_default_library",
        "//proto:go_default_library",
        "//runtime/protoimpl:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":prototest",
    visibility = ["//visibility:public"],
)
