load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jsonfuzz",
    srcs = ["fuzz.go"],
    importpath = "google.golang.org/protobuf/internal/fuzz/jsonfuzz",
    visibility = ["//:__subpackages__"],
    deps = [
        "//encoding/protojson",
        "//internal/testprotos/fuzz",
        "//proto",
    ],
)

go_test(
    name = "jsonfuzz_test",
    srcs = ["fuzz_test.go"],
    embed = [":jsonfuzz"],
    deps = ["//internal/fuzztest"],
)

alias(
    name = "go_default_library",
    actual = ":jsonfuzz",
    visibility = ["//:__subpackages__"],
)
