load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "annotation_proto",
    srcs = ["annotation.proto"],
    visibility = ["//:__subpackages__"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_library(
    name = "annotation",
    srcs = ["annotation.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/annotation",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
        "//types/descriptorpb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":annotation",
    visibility = ["//:__subpackages__"],
)
