load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "fieldtrack_proto",
    srcs = ["fieldtrack.proto"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testprotos/annotation:annotation_proto",
        "//internal/testprotos/test:test_proto",
        "//internal/testprotos/test/weak1:weak1_proto",
        "//internal/testprotos/test/weak2:weak2_proto",
    ],
)

go_library(
    name = "fieldtrack",
    srcs = ["fieldtrack.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/fieldtrack",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testprotos/annotation",
        "//internal/testprotos/test",
        "//proto",
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":fieldtrack",
    visibility = ["//:__subpackages__"],
)
