load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "fuzz_proto",
    srcs = ["fuzz.proto"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testprotos/test:test_proto",
        "//internal/testprotos/test3:test3_proto",
    ],
)

go_library(
    name = "fuzz",
    srcs = ["fuzz.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/fuzz",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testprotos/test",
        "//internal/testprotos/test3",
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":fuzz",
    visibility = ["//:__subpackages__"],
)
