load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "irregular_proto",
    srcs = [
        "irregular.proto",
        "test.proto",
    ],
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "irregular",
    srcs = [
        "irregular.go",
        "test.pb.go",
    ],
    importpath = "google.golang.org/protobuf/internal/testprotos/irregular",
    visibility = ["//:__subpackages__"],
    deps = [
        "//encoding/prototext",
        "//reflect/protodesc",
        "//reflect/protoreflect",
        "//runtime/protoiface",
        "//runtime/protoimpl",
        "//types/descriptorpb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":irregular",
    visibility = ["//:__subpackages__"],
)
