load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "news_proto",
    srcs = ["news.proto"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_library(
    name = "news",
    srcs = ["news.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/news",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
        "//types/known/anypb",
        "//types/known/timestamppb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":news",
    visibility = ["//:__subpackages__"],
)
