load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "order_proto",
    srcs = ["order.proto"],
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "order",
    srcs = ["order.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/order",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":order",
    visibility = ["//:__subpackages__"],
)
