load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "registry_proto",
    srcs = ["test.proto"],
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "registry",
    srcs = ["test.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/registry",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":registry",
    visibility = ["//:__subpackages__"],
)
