load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "test_proto",
    srcs = [
        "ext.proto",
        "test.proto",
        "test_import.proto",
        "test_public.proto",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testprotos/enums:enums_proto",
        "//internal/testprotos/test/weak1:weak1_proto",
        "//internal/testprotos/test/weak2:weak2_proto",
    ],
)

go_library(
    name = "test",
    srcs = [
        "ext.pb.go",
        "test.pb.go",
        "test_import.pb.go",
        "test_public.pb.go",
    ],
    importpath = "google.golang.org/protobuf/internal/testprotos/test",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testprotos/enums",
        "//proto",
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":test",
    visibility = ["//:__subpackages__"],
)
