load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "test3_proto",
    srcs = [
        "test.proto",
        "test_extension.proto",
        "test_import.proto",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_library(
    name = "test3",
    srcs = [
        "test.pb.go",
        "test_extension.pb.go",
        "test_import.pb.go",
    ],
    importpath = "google.golang.org/protobuf/internal/testprotos/test3",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
        "//types/descriptorpb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":test3",
    visibility = ["//:__subpackages__"],
)
