load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "textpb2_proto",
    srcs = ["test.proto"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_library(
    name = "textpb2",
    srcs = ["test.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/textpb2",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
        "//types/known/anypb",
        "//types/known/durationpb",
        "//types/known/emptypb",
        "//types/known/fieldmaskpb",
        "//types/known/structpb",
        "//types/known/timestamppb",
        "//types/known/wrapperspb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":textpb2",
    visibility = ["//:__subpackages__"],
)
