load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "textpb3_proto",
    srcs = ["test.proto"],
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "textpb3",
    srcs = ["test.pb.go"],
    importpath = "google.golang.org/protobuf/internal/testprotos/textpb3",
    visibility = ["//:__subpackages__"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":textpb3",
    visibility = ["//:__subpackages__"],
)
