load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "comments_proto",
    srcs = [
        "comments.proto",
        "deprecated.proto",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "comments",
    srcs = [
        "comments.pb.go",
        "deprecated.pb.go",
    ],
    importpath = "google.golang.org/protobuf/cmd/protoc-gen-go/testdata/comments",
    visibility = ["//visibility:public"],
    deps = [
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":comments",
    visibility = ["//visibility:public"],
)
