load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "imports_proto",
    srcs = [
        "test_import_a1m1.proto",
        "test_import_a1m2.proto",
        "test_import_all.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/protoc-gen-go/testdata/imports/fmt:fmt_proto",
        "//cmd/protoc-gen-go/testdata/imports/test_a_1:test_a_1_proto",
        "//cmd/protoc-gen-go/testdata/imports/test_a_2:test_a_2_proto",
        "//cmd/protoc-gen-go/testdata/imports/test_b_1:test_b_1_proto",
    ],
)

go_library(
    name = "imports",
    srcs = [
        "test_import_a1m1.pb.go",
        "test_import_a1m2.pb.go",
        "test_import_all.pb.go",
    ],
    importpath = "google.golang.org/protobuf/cmd/protoc-gen-go/testdata/imports",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/protoc-gen-go/testdata/imports/fmt",
        "//cmd/protoc-gen-go/testdata/imports/test_a_1",
        "//cmd/protoc-gen-go/testdata/imports/test_a_2",
        "//cmd/protoc-gen-go/testdata/imports/test_b_1",
        "//reflect/protoreflect",
        "//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":imports",
    visibility = ["//visibility:public"],
)
